# LLMs-And-Multi-Agent-Orchestration-Course

./: README.md
ex1/: PRD.md  README.md  requirements.txt
ex2/: ARCHITECTURE.md  PRD.md  PROJECT_REVIEW.md  README.md  requirements.txt
ex3/: FINAL_STATUS.md  PROJECT_INDEX.md  README.md  (+10 more)
ex7/: README.md  create_submission_pdf.py  even_odd_league_agent_context.md  ex7_self_assessment_agent.md  pyproject.toml  requirements.txt
ex7/SHARED/config/: system.json
ex7/SHARED/config/agents/: agents_config.json
ex7/SHARED/config/defaults/: player.json  referee.json
ex7/SHARED/config/games/: games_registry.json
ex7/SHARED/config/leagues/: league_2025_even_odd.json
ex7/SHARED/data/leagues/league_2025_even_odd/: standings.json
ex7/SHARED/data/matches/league_2025_even_odd/: R1M1.json  R1M2.json  R2M3.json  R2M4.json  R3M5.json  R3M6.json
ex7/SHARED/league_sdk/: __init__.py  config_loader.py  http_client.py  logger.py  models.py
ex7/SHARED/logs/agents/: Agent_Alpha.log.jsonl  Agent_Beta.log.jsonl  Agent_Delta.log.jsonl  Agent_Gamma.log.jsonl  Referee_Alpha.log.jsonl
ex7/SHARED/logs/league/league_2025_even_odd/: league_manager.log.jsonl
ex7/agents/league_manager/: __init__.py  handlers.py  main.py  scheduler.py  state.py
ex7/agents/player/: __init__.py  handlers.py  main.py  state.py  strategy.py
ex7/agents/referee/: __init__.py  game_logic.py  handlers.py  main.py  state.py
ex7/docs/: ARCHITECTURE.md  PRD.md
ex7/scripts/: run_demo.py  run_league.py
ex7/tests/: __init__.py  test_game_logic.py  test_models.py  test_player_strategy.py  test_scheduler.py
(+154 files in other folders)
